cargo-features = ["profile-overrides"]

[package]
name = "ddos"
version = "0.1.0"
authors = ["Matt Taylor"]
edition = "2018"

[workspace]
members = [
    "ddos_ds",
    "ddos_drivers",
]

[profile.dev]
panic = "abort"
debug = false

[package.metadata.bootimage]
run-command = [
    "qemu-system-x86_64",
    "-drive", "format=raw,file={}",
    "-enable-kvm"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-display", "none"
]
test-success-exit-code = 33

[profile.release]
panic = "abort"

[dependencies]
x86_64 = "0.7.1"
bootloader = "0.6.0"
ddos_ds = { path = "ddos_ds" }
ddos_drivers = { path = "ddos_drivers" }
log = "0.4.6"
lazy_static = "1.3.0"
