[package]
name = "solstice"
version = "0.1.0"
authors = ["Matt Taylor"]
edition = "2018"

[package.metadata.bootimage]
run-command = [
    "qemu-system-x86_64",
    "-serial", "stdio",
    "-drive", "format=raw,file={}",
    "-no-reboot",
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-display", "none",
    "-no-reboot",
]
test-success-exit-code = 33

[profile.dev]
panic = "abort"
debug = false

[profile.release]
panic = "abort"

[dependencies]
x86_64 = { path = "x86_64" }
bootloader = { path = "bootloader", features = ["map_physical_memory"] }
log = "0.4.6"
volatile = "0.2.6"
lazy_static = { version = "1", features = ["spin_no_std"] }
intrusive-collections = { version = "0.8.1", features = ["nightly"] }
arrayvec = { version = "0.4.10", default-features = false }
