[package]
name = "solstice"
version = "0.1.0"
authors = ["Matt Taylor"]
edition = "2018"

[package.metadata.bootimage]
run-command = [
    "qemu-system-x86_64",
    "-serial", "stdio",
    "-machine", "q35",
    "-drive", "format=raw,file={}",
    "-no-reboot",
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-display", "none",
]
test-success-exit-code = 33

[package.metadata.bootloader]
physical-memory-offset = "0xffff800000000000"
kernel-stack-address = "0xffffff8000000000"
kernel-stack-size = 64

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"

[dependencies]
x86_64 = {version = "0.14.3", features = ["nightly"]}
bootloader = { version = "0.9.0", features = ["map_physical_memory"] }
log = "0.4.8"
volatile = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
intrusive-collections = { version = "0.9.1", features = ["nightly"] }
arrayvec = { version = "0.5.1", default-features = false }
acpi = "3.0.0"
aml = "0.4.0"
#acpi = { path = "../acpi/acpi/" }
#aml = { path = "../acpi/aml/" }
#apic = { path = "../apic" }
